--- a/src/styles/base/_animations.scss
+++ b/src/styles/base/_animations.scss
@@ -15,3 +15,15 @@
     opacity: 0;
   }
 }
+
+@keyframes fadeScaleAnimateIn {
+  0% {
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5);
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
