--- a/src/styles/base/_utilities.scss
+++ b/src/styles/base/_utilities.scss
@@ -7,7 +7,33 @@
 .font-bold {
   font-weight: bold;
 }
-
+.font-100 {
+  font-weight: 100;
+}
+.font-200 {
+  font-weight: 200;
+}
+.font-300 {
+  font-weight: 300;
+}
+.font-400 {
+  font-weight: 400;
+}
+.font-500 {
+  font-weight: 500;
+}
+.font-600 {
+  font-weight: 600;
+}
+.font-700 {
+  font-weight: 700;
+}
+.font-800 {
+  font-weight: 800;
+}
+.font-900 {
+  font-weight: 900;
+}
 .font-normal {
   font-weight: normal;
 }
@@ -17,6 +43,9 @@
 }
 .text-black {
   color: $color-black;
+}
+.text-center {
+  text-align: center;
 }
 .sentenceCase {
   @include sentence-case();
