update: sketched out uploaded cat list ui

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -3,5 +3,6 @@ $fontJost: "Jost", sans-serif;
 $fontLato: "Lato", sans-serif;
 
 // Colors
-$color-black: #000000;
+$color-black: #222222;
 $color-white: #ffffff;
+$color-brown: #6e3012;
