--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,47 +1,141 @@
-.head_banner {
-  position: relative;
-  overflow: hidden;
-  max-height: 50vh;
-
-  &_img {
-    width: 100%;
-    height: 100%;
+.homepage {
+  width: 100%;
+  height: 100%;
+  .head_banner {
     position: relative;
-    transform: scale(1);
-    animation-name: fadeScaleAnimateIn;
-    animation-timing-function: ease;
-    animation-duration: 5s;
-    transform-origin: 50% 50% 0;
-    &::before {
-      position: absolute;
-      display: block;
-      content: "";
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background-color: #00000080;
-    }
-    img {
-      object-fit: cover;
+    overflow: hidden;
+    max-height: 50vh;
+    // max-height: 50rem;
+
+    &_img {
       width: 100%;
-      height: auto;
-      min-height: 50rem;
-      vertical-align: middle;
+      height: 100%;
+      position: relative;
+      transform: scale(1);
+      animation-name: fadeScaleAnimateIn;
+      animation-timing-function: ease;
+      animation-duration: 5s;
+      transform-origin: 50% 50% 0;
+      &::before {
+        position: absolute;
+        display: block;
+        content: "";
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: #00000080;
+        z-index: 1;
+      }
+      img {
+        object-fit: cover;
+        position: relative;
+        top: -20rem;
+        width: 100%;
+        height: auto;
+        min-height: 50rem;
+        vertical-align: middle;
+      }
+    }
+
+    &_content {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+      h1 {
+        font-size: 4rem;
+      }
+      p {
+        font-size: 2rem;
+      }
     }
   }
 
   &_content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    h1 {
-      font-size: 4rem;
-    }
-    p {
-      font-size: 2rem;
+    height: 100%;
+    .cat_list_sect {
+      margin-top: 7rem;
+      height: 100%;
+      width: 100%;
+
+      &__title {
+        font-size: 2.4rem;
+        color: $color-black;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        position: relative;
+        display: inline-block;
+        padding-bottom: 1rem;
+        &::before {
+          content: "";
+          width: 50%;
+          height: 2px;
+          background: $color-brown;
+          position: absolute;
+          left: 50%;
+          transform: translate(-50%);
+          bottom: 0;
+        }
+      }
+
+      .cat_list {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(27.5rem, 1fr));
+        gap: 0.9rem 2rem;
+        max-width: 120rem;
+        margin: auto;
+        margin-top: 5rem;
+
+        &_item {
+          height: 100%;
+          width: 100%;
+          position: relative;
+
+          &_img {
+            height: 100%;
+            width: 100%;
+            max-height: 25rem;
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: contain;
+            }
+          }
+          &_cta {
+            // margin-top: 2rem;
+            display: flex;
+            align-items: center;
+            padding: 2rem 1rem;
+            justify-content: space-between;
+            button {
+              padding: 0.5rem 1rem;
+              border-radius: 1rem;
+              width: 11rem;
+              background: transparent;
+              border: 1px solid $color-brown;
+              font-size: 1.3rem;
+            }
+            svg {
+              color: black;
+            }
+          }
+
+          .favourite_cat {
+            width: 3.2rem;
+            height: 3.2rem;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            background: #ededed;
+            position: absolute;
+            top: 1rem;
+            right: 1rem;
+          }
+        }
+      }
     }
   }
 }
