update: added functionality to favourite toggle and vote casting handlers

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -45,7 +45,7 @@
 html {
   // This defines what 1rem is
   font-size: 62.5%;
-  font-family: $fontJost;
+  font-family: $fontJost, $fontLato;
   color: $color-black;
 }
 
