--- a/src/styles/base/_utilities.scss
+++ b/src/styles/base/_utilities.scss
@@ -1,8 +1,8 @@
-.text-jost {
-  font-family: $fontJost;
+.font-jost {
+  font-family: $fontJost !important;
 }
-.text-lato {
-  font-family: $fontLato;
+.font-lato {
+  font-family: $fontLato !important;
 }
 .font-bold {
   font-weight: bold;
