--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -54,6 +54,7 @@
   }
 
   &_content {
+    padding-bottom: 10rem;
     height: 100%;
     .cat_list_sect {
       margin-top: 7rem;
@@ -92,11 +93,17 @@
           height: 100%;
           width: 100%;
           position: relative;
+          border-radius: 1rem;
+          padding: 1rem;
+          transition: box-shadow 0.25s linear;
+
+          &:hover {
+            box-shadow: 0 0 8px 1px lightgrey;
+          }
 
           &_img {
-            height: 100%;
             width: 100%;
-            max-height: 25rem;
+            height: 25rem;
             img {
               width: 100%;
               height: 100%;
@@ -104,21 +111,41 @@
             }
           }
           &_cta {
-            // margin-top: 2rem;
             display: flex;
             align-items: center;
             padding: 2rem 1rem;
-            justify-content: space-between;
+            justify-content: center;
+            column-gap: 1.5rem;
             button {
               padding: 0.5rem 1rem;
               border-radius: 1rem;
-              width: 11rem;
+              width: 4rem;
               background: transparent;
               border: 1px solid $color-brown;
+              color: $color-black;
               font-size: 1.3rem;
+              font-weight: 700;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              &:disabled {
+                color: initial;
+              }
+              &.active {
+                // cursor: not-allowed;
+                background: lighten($color-brown, 65%);
+              }
             }
-            svg {
-              color: black;
+          }
+
+          &_score {
+            font-size: 1.4rem;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .score_value {
+              font-size: 1.8rem;
             }
           }
 
@@ -133,6 +160,9 @@
             position: absolute;
             top: 1rem;
             right: 1rem;
+            &:active {
+              scale: 0.96;
+            }
           }
         }
       }
