--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -55,3 +55,33 @@ body {
   position: relative;
   scroll-behavior: smooth;
 }
+
+.is-loading {
+  --overlay-color: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: var(--overlay-color);
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &-icon {
+    border-radius: 50%;
+    border: 2.5px solid;
+    border-color: $color-white;
+    width: 19px;
+    height: 19px;
+    border-right-color: transparent;
+    animation: spinner 1.5s linear infinite;
+
+    @keyframes spinner {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+  }
+}
