--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -158,6 +158,7 @@
             border-radius: 50%;
             background: #ededed;
             position: absolute;
+            overflow: hidden;
             top: 1rem;
             right: 1rem;
             &:active {
