--- a/src/styles/base/_animations.scss
+++ b/src/styles/base/_animations.scss
@@ -27,3 +27,52 @@
     transform: scale(1);
   }
 }
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0px);
+  }
+
+  50% {
+    transform: translateY(-15px);
+  }
+
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+@keyframes shrink {
+  0% {
+    width: 95px;
+  }
+
+  50% {
+    width: 75px;
+  }
+
+  100% {
+    width: 95px;
+  }
+}
+
+@keyframes animateUnderline {
+  0% {
+    width: 0%;
+  }
+  60% {
+    width: 100%;
+  }
+  100% {
+    width: 60%;
+  }
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
