--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -54,34 +54,58 @@ body {
   height: 100%;
   position: relative;
   scroll-behavior: smooth;
-}
 
-.is-loading {
-  --overlay-color: rgba(0, 0, 0, 0.4);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: var(--overlay-color);
-  z-index: 2;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  &-icon {
-    border-radius: 50%;
-    border: 2.5px solid;
-    border-color: $color-white;
-    width: 19px;
-    height: 19px;
-    border-right-color: transparent;
-    animation: spinner 1.5s linear infinite;
+  .navbar {
+    background: $color-white;
+    padding: 1.6rem;
+    font-size: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 5rem;
+    color: $color-brown;
+    position: relative;
+    z-index: 5;
+    a {
+      position: relative;
+      display: inline-block;
+      padding: 0.3rem;
 
-    @keyframes spinner {
-      0% {
-        transform: rotate(0deg);
+      &::before {
+        content: "";
+        height: 2px;
+        background: $color-brown;
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%);
+        bottom: 0;
       }
-      100% {
-        transform: rotate(360deg);
+
+      &:hover::before {
+        width: 60%;
+        animation: animateUnderline 0.5s linear;
       }
+    }
+  }
+
+  .is-loading {
+    --overlay-color: rgba(0, 0, 0, 0.4);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: var(--overlay-color);
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &-icon {
+      border-radius: 50%;
+      border: 2.5px solid;
+      border-color: $color-white;
+      width: 19px;
+      height: 19px;
+      border-right-color: transparent;
+      animation: spinner 1.5s linear infinite;
     }
   }
 }
