--- a/src/styles/pages/_upload.scss
+++ b/src/styles/pages/_upload.scss
@@ -62,6 +62,7 @@
       z-index: 20;
       border-radius: var(--dialog-border-radius);
       padding: var(--dialog-padding);
+      animation: animateUnderline 0.5s linear;
 
       .file-input {
         position: absolute;
@@ -203,34 +204,6 @@
         height: 9rem;
         border-right-color: transparent;
       }
-    }
-  }
-
-  @keyframes bounce {
-    0% {
-      transform: translateY(0px);
-    }
-
-    50% {
-      transform: translateY(-15px);
-    }
-
-    100% {
-      transform: translateY(0px);
-    }
-  }
-
-  @keyframes shrink {
-    0% {
-      width: 95px;
-    }
-
-    50% {
-      width: 75px;
-    }
-
-    100% {
-      width: 95px;
     }
   }
 }
